# babys-first-transformer

./: .gitignore  README.md  batch.py  train.py  train_de2en.py
data/: download.py
models/: attention.py  layers.py  transformer.py
tokenizer/: Cargo.toml  train.py
tokenizer/data/: merges.txt
tokenizer/src/: lib.rs  main.rs  py.rs  tokenizer.rs
