[package]
name = "tokenizer"
version = "0.1.0"
edition = "2021"

[lib]
name = "tokenizer"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tokenizer_cli"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

pyo3 = { version = "0.22", features = ["extension-module"] }
